<resources>
    <string name="app_name">GoGo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="input_password">ENTER yYOUR PASSWORD</string>
    <string name="auth_failed">AUTHENTICATION FAILED</string>
    <string name="Login">Login</string>
    <string name="No_account_warning">No account yet? Create one</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="status">LOADING</string>
    <string name="detail">DETAILS WILL BE ADDED LATER.</string>
    <string name="finally_it_appeared">FINALLY IT APPEARED.</string>
    <string name="Bus1">BUS1</string>
    <string name="Bus2">BUS2</string>
    <string name="Bus3">BUS3</string>
    <string name="Bus4">BUS4</string>
    <string name="Bus5">BUS5</string>
    <string name="pick_me">PICK ME</string>
    <string name="distance">Distance : 0Km</string>
    <string name="time">Time : 0s</string>
    <string name="splash_screen">SPLASH SCREEN</string>
    <string name="Normal">Normal</string>
    <string name="Satellite">Satellite</string>
    <string name="Type">Type:</string>
    <string name="Terrain">Terrain</string>
    <string name="Hybrid">Hybrid</string>
    <string name="_0_km">0 km</string>
    <string name="_0_min">0 min</string>
    <string name="log_out">Log Out</string>
    <string name="logging_out">Logging Out</string>
    <string name="google_direction_api_key">AIzaSyChXllnUaESuRZPDpSHtb3oyXgL1edHITg</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="others">Others</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logOut">Log Out</string>
    <string name="settings">Settings</string>

    <string name="iit_palakkad">IIT PALAKKAD</string>
    <string name="admin_id">kunal725725@gmail.com</string>
    <string name="iit_palakkad_logo">IIT PALAKKAD LOGO</string>
    <string name="time_duration">Time Duration</string>
    <string name="refresh">Refresh</string>
    <string name="Bus6">BUS6</string>
    <string name="rate_our_app">Rate our App</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="nearest_bus">Find Nearest Bus</string>
    <string name="undo_string">UNDO</string>
</resources>
