<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:showIn="@layout/app_bar_maps"
              tools:context="com.iam725.kunal.gogonew.MapsActivity"
              android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/scrollview_choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/group_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|end"
                    android:dividerPadding="12dp"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    android:divider="@drawable/vertical_divider"
            >

            <RadioButton
                android:id="@+id/bus1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:onClick="onRadioButtonClicked"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:text="@string/Bus1"
                android:textAlignment="center"
                android:textSize="16sp"
                app:buttonTint="@color/colorPrimaryDark"/>
            <!--android:background="@drawable/underline"-->

            <RadioButton
                android:id="@+id/bus2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:onClick="onRadioButtonClicked"
                android:padding="20dp"
                android:text="@string/Bus2"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/bus3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:onClick="onRadioButtonClicked"
                android:padding="20dp"
                android:text="@string/Bus3"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/bus4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:onClick="onRadioButtonClicked"
                android:padding="20dp"
                android:text="@string/Bus4"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/bus5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
                android:onClick="onRadioButtonClicked"
                android:padding="20dp"
                android:text="@string/Bus5"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <!--<RadioButton-->
                <!--android:id="@+id/bus6"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:button="@color/cast_expanded_controller_ad_container_white_stripe_color"-->
                <!--android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"-->
                <!--android:onClick="onRadioButtonClicked"-->
                <!--android:padding="20dp"-->
                <!--android:text="@string/Bus6"-->
                <!--android:textAlignment="center"-->
                <!--android:textSize="16sp"/>-->
        </RadioGroup>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_distance"
                android:contentDescription="@string/distance"/>
            <TextView

                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/_0_km"
                android:id="@+id/distance" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_clock"
                android:contentDescription="@string/time_duration"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/_0_min"
                android:id="@+id/time" />
        </LinearLayout>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/type" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="onNormalMap"-->
            <!--android:text="@string/normal" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="onSatelliteMap"-->
            <!--android:text="@string/satellite" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="onTerrainMap"-->
            <!--android:text="@string/terrain" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="onHybridMap"-->
            <!--android:text="@string/hybrid" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/map"
                  android:name="com.google.android.gms.maps.SupportMapFragment"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"

                  tools:context="com.iam725.kunal.map_trial.MapsActivity" />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal|end"-->
        <!--android:orientation="horizontal">-->

        <!--<Button-->
            <!--android:id="@+id/pick_me"-->
            <!--style="@style/Widget.AppCompat.Button.Colored"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical|center_horizontal"-->
            <!--android:layout_marginBottom="1dp"-->
            <!--android:layout_marginEnd="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_weight="1.00"-->
            <!--android:background="#3388ee"-->
            <!--android:contentDescription="@string/pick_me"-->
            <!--android:onClick="pickMe"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/pick_me"-->
            <!--android:textSize="20sp"/>-->

        <!--<Button-->
            <!--android:id="@+id/cancel"-->
            <!--style="@style/Widget.AppCompat.Button.Colored"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical|center_horizontal"-->
            <!--android:layout_marginBottom="1dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginStart="5dp"-->
            <!--android:layout_weight="1.00"-->
            <!--android:background="#FF0000"-->
            <!--android:onClick="cancel"-->
            <!--android:padding="10dp"-->
            <!--android:text="@string/cancel"-->
            <!--android:textSize="20sp"/>-->
    <!--</LinearLayout>-->


</LinearLayout>