<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="45dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/iitpkd_new"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="30dp"
                   android:layout_gravity="center_horizontal"
                   android:contentDescription="IIT PALAKKAD LOGO"/>

        <!--  Email Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:textSize="18sp"
                      android:hint="@string/Email"/>
        </LinearLayout>

        <!--  Password Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textSize="18sp"
                android:inputType="textPassword"/>
        </LinearLayout>

        <!--<android.support.v7.widget.AppCompatButton-->
        <!--android:id="@+id/btn_login"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:padding="12dp"-->
        <!--android:text="@string/Login"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--<ImageButton-->
                <!--android:id="@+id/btn_login"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:scaleType="fitXY"-->
                <!--android:background="@drawable/custom_button_event"/>-->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:text="Log in"
                android:textAllCaps="false"
                android:textColor="#eeeeee"
                android:background="@drawable/sign_up_button_event"/>

            <Button
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#fff"
                android:gravity="top"
                android:padding="15dp"
                android:text="@string/forgot_password"
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                android:textColor="#777"
                android:textSize="11sp"/>

            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#fff"
                android:gravity="top"
                android:text="Not registered yet. Sign Up"
                android:textSize="11sp"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="#777"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>